--- a/client/game/package.json
+++ b/client/game/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.11.2",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
+    "react-confetti-explosion": "^2.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
